--- a/01_introduccion_al_dom/practica/index.html
+++ b/01_introduccion_al_dom/practica/index.html
@@ -10,6 +10,6 @@
         <script type="text/javascript" src="script.js"></script>
 	</head>
 	<body>
-     <div><br/><strong>¡Hazme clic!</strong></div>   
+     <div><br/><strong>¡Pásame por encima!</strong></div>   
 	</body>
 </html>
