Corregido index.html 03 - Crear y modificar elementos HTML

--- a/02_funciones_y_selectores/panel_deslizante/index.html
+++ b/02_funciones_y_selectores/panel_deslizante/index.html
@@ -6,8 +6,7 @@
 		<title>Panel deslizante</title>
       <script type='text/javascript' src='jquery-1.11.0.min.js'></script>
       <script type='text/javascript' src='script.js'></script>
-      <link rel="stylesheet" href="stylesheet.css"></style>
-</style>
+      <link rel="stylesheet" href="stylesheet.css"/>
 	</head>
 	<body>
         <div class="panel">
