--- a/03_crear_elementos_html/intro_creacion_elementos_html/index.html
+++ b/03_crear_elementos_html/intro_creacion_elementos_html/index.html
@@ -3,16 +3,11 @@
 <html>
 	<head>
 		<meta charset="UTF-8"/>
-		<title>La Palabra clave "THIS"</title>
+		<title>Las Bolitas fantasmas</title>
       <script type='text/javascript' src='jquery-1.11.0.min.js'></script>
       <script type='text/javascript' src='script.js'></script>
-      <link rel="stylesheet" href="stylesheet.css">
-</style>
 	</head>
 	<body>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+	
    </body>
 </html>
