--- a/02_funciones_y_selectores/mas_selectores/index.html
+++ b/02_funciones_y_selectores/mas_selectores/index.html
@@ -5,7 +5,7 @@
 		<title>Acto de desaparición</title>
       <script type='text/javascript' src='jquery-1.11.0.min.js'></script>
       <script type='text/javascript' src='script.js'></script>
-      <link rel="stylesheet" href="stylesheet.css"></style>
+      <link rel="stylesheet" href="stylesheet.css" />
 </style>
 	</head>
 	<body>
