03 - Creación y modificación de elementos del DOM

--- a/03_crear_elementos_html/intro_creacion_elementos_html/index.html
+++ b/03_crear_elementos_html/intro_creacion_elementos_html/index.html
@@ -8,6 +8,10 @@
       <script type='text/javascript' src='script.js'></script>
 	</head>
 	<body>
-		
+        <div class="container">
+            <h2>Saludos</h2>
+            <div id="uno">Div #1</div>
+            <div id="dos">Div #2</div>
+        </div>   
 	</body>
 </html>
